# CJOPROO

./: CMakeLists.txt  calendario.cpp  calendario.h  cenario.cpp  cenario.h  fazendeiro.cpp  fazendeiro.h  game.cpp  game.h  lobo.cpp  lobo.h  main.cpp  minigame_ordenha.cpp  minigame_ordenha.h  tipos.h  vaca.cpp  vaca.h
